proj1/tests/other-tests/minz-tests/error/autograder-test-bad-numerall3.py
# Numeral too big
print 0x40000001

